chore: Rename all references from inventory-assistant to itemwise (bd-aez)
Standardize project naming to use 'itemwise' consistently across:
- Docker image tags and container names
- azure.yaml configuration
- CLI commands (itemwise-server, itemwise-web)
- Documentation (README, QUICKSTART, SPEC)
- MCP server name registration

This improves brand consistency and prepares for deployment.

--- a/azure.yaml
+++ b/azure.yaml
@@ -1,8 +1,8 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/Azure/azure-dev/main/schemas/v1.0/azure.yaml.json
 
-name: inventory-assistant
+name: itemwise
 metadata:
-  template: inventory-assistant@0.0.1
+  template: itemwise@0.0.1
   
 services:
   api:
