--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,6 @@ jobs:
         with:
           context: .
           push: false
-          tags: inventory-assistant:${{ github.sha }}
+          tags: itemwise:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
