--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,8 +33,8 @@ dev = [
 ]
 
 [project.scripts]
-inventory-server = "itemwise.server:main"
-inventory-web = "itemwise.api:run_api"
+itemwise-server = "itemwise.server:main"
+itemwise-web = "itemwise.api:run_api"
 
 [build-system]
 requires = ["hatchling"]
