--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,10 +47,26 @@ dev = [
     "pytest-asyncio>=1.3.0",
     "pytest-cov>=7.0.0",
     "pytest-mock>=3.15.1",
+    "ruff>=0.9.0",
 ]
 
 [tool.isort]
 profile = "black"
+
+[tool.ruff]
+line-length = 140
+target-version = "py311"
+
+[tool.ruff.lint]
+select = ["E", "F", "W"]
+ignore = [
+    "E402",  # Module level import not at top (needed for load_dotenv pattern)
+    "F821",  # Undefined name (false positive for forward references)
+    "W293",  # Blank line contains whitespace (common in docstrings)
+]
+
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = ["E501"]  # Allow longer lines in tests
 
 [tool.mypy]
 explicit_package_bases = true
