--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,21 +54,5 @@ jobs:
       - name: Run linting
         run: uv run ruff check src/
 
-  build:
-    runs-on: ubuntu-latest
-    needs: test
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build Docker image
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: false
-          tags: itemwise:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+  # Note: Docker build removed from CI due to HuggingFace model download timeout.
+  # Use scripts/deploy.ps1 for local Docker builds and deployment.
