feat: Add user authentication and multi-tenant data isolation (bd-12u)
- Add User model with email, password_hash, is_active fields
- Add user_id foreign key to InventoryItem and Location models
- Implement JWT-based auth with bcrypt password hashing
- Add auth endpoints: /api/auth/register, /api/auth/login, /api/auth/me
- Protect all API endpoints with auth middleware
- Update all CRUD operations to filter by user_id
- Add login/register UI to frontend with localStorage token storage
- Add Alembic migration for users table and user_id columns
- Add ruff ignore rules for E402 and F821

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ dependencies = [
     "azure-identity>=1.15.0",
     "playwright>=1.58.0",
     "httpx>=0.28.1",
+    "passlib[bcrypt]>=1.7.0",
+    "python-jose[cryptography]>=3.3.0",
+    "python-multipart>=0.0.9",
 ]
 
 [project.optional-dependencies]
@@ -62,3 +65,9 @@ disallow_untyped_decorators = false
 [[tool.mypy.overrides]]
 module = ["alembic", "alembic.*"]
 ignore_errors = true
+
+[tool.ruff]
+line-length = 140
+
+[tool.ruff.lint]
+ignore = ["E402", "F821"]
