--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - POSTGRES_DB=inventory
       - AZURE_OPENAI_ENDPOINT=${AZURE_OPENAI_ENDPOINT}
       - AZURE_OPENAI_DEPLOYMENT=${AZURE_OPENAI_DEPLOYMENT:-gpt-5-nano}
+      - JWT_SECRET_KEY=${JWT_SECRET_KEY:-}
+      - DEBUG=${DEBUG:-false}
       - HF_HUB_OFFLINE=1
       - TRANSFORMERS_OFFLINE=1
     depends_on:
