--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,16 +14,14 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=inventory
       - AZURE_OPENAI_ENDPOINT=${AZURE_OPENAI_ENDPOINT}
-      - AZURE_OPENAI_DEPLOYMENT=${AZURE_OPENAI_DEPLOYMENT:-gpt-5-nano}
+      - AZURE_OPENAI_DEPLOYMENT=${AZURE_OPENAI_DEPLOYMENT:-gpt-4o-mini}
       - JWT_SECRET_KEY=${JWT_SECRET_KEY:-}
       - DEBUG=${DEBUG:-false}
-      - HF_HUB_OFFLINE=1
-      - TRANSFORMERS_OFFLINE=1
     depends_on:
       postgres:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "python", "-c", "import httpx; httpx.get('http://localhost:8080/api/items', timeout=5)"]
+      test: ["CMD", "python", "-c", "import httpx; r=httpx.get('http://localhost:8080/health', timeout=5); exit(0 if r.status_code==200 else 1)"]
       interval: 30s
       timeout: 10s
       start_period: 60s
