docs: update README, QUICKSTART, and .env.example for Azure OpenAI
- Fix semantic search description: sentence-transformers -> Azure OpenAI
- Add AZURE_OPENAI_EMBEDDING_DEPLOYMENT to config docs and .env.example
- Remove stale OPENAI_API_KEY from .env.example
- Rewrite QUICKSTART.md: remove hardcoded paths, fix table names, add
  prerequisites, troubleshooting table, and correct SQL examples

--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,8 @@ DEBUG=false
 # SECRET_KEY=your-secure-random-key-here
 # JWT_SECRET_KEY=your-jwt-secret-here  # Alternative: JWT-specific key
 
-# Optional: For embeddings generation (OpenAI)
-# OPENAI_API_KEY=sk-...
+# Azure OpenAI (optional - enables intelligent chat + semantic search)
+# Uses DefaultAzureCredential (run `az login` first)
+# AZURE_OPENAI_ENDPOINT=https://your-resource.cognitiveservices.azure.com/
+# AZURE_OPENAI_DEPLOYMENT=gpt-4o-mini
+# AZURE_OPENAI_EMBEDDING_DEPLOYMENT=text-embedding-3-small
