--- a/pytest.ini
+++ b/pytest.ini
@@ -15,6 +15,7 @@ addopts =
     --cov-report=xml
     --cov-branch
     --cov-fail-under=40
+    -m "not e2e"
 
 # Ignore warnings from dependencies
 filterwarnings =
@@ -25,3 +26,4 @@ markers =
     asyncio: marks tests as async
     slow: marks tests as slow (deselect with '-m "not slow"')
     integration: marks tests as integration tests
+    e2e: marks tests as end-to-end Playwright tests (deselect with '-m "not e2e"')
