fix: invite error display, logout state cleanup, App Insights SDK
- Handle FastAPI 422 detail arrays in invite and password change error handlers
- Clear all app state on logout (activeInventoryId, DOM elements, inventory selector)
- Hide inventory-selector-row on logout and showAuthScreen
- Add azure-monitor-opentelemetry for auto-instrumentation of FastAPI, SQLAlchemy, httpx
- Conditional import guarded by APPLICATIONINSIGHTS_CONNECTION_STRING env var

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "passlib>=1.7.4",
     "slowapi>=0.1.9",
     "bcrypt>=5.0.0",
+    "azure-monitor-opentelemetry>=1.6.0",
 ]
 
 [project.optional-dependencies]
