feat: send invite emails via Azure Communication Services
- Add ACS Email + Communication Services to Bicep infrastructure
- Create email_service.py with send_invite_email() and send_added_email()
- Update invite endpoint: return 'invited' with email for unknown users
  instead of 404 error
- Update frontend to show 'Invite sent to X' for non-registered users
- Add azure-communication-email SDK dependency
- Add AZURE_COMMUNICATION_CONNECTION_STRING and SENDER config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "slowapi>=0.1.9",
     "bcrypt>=5.0.0",
     "azure-monitor-opentelemetry>=1.6.0",
+    "azure-communication-email>=1.0.0",
 ]
 
 [project.optional-dependencies]
@@ -70,6 +71,7 @@ ignore = [
 
 [tool.ruff.lint.per-file-ignores]
 "tests/*" = ["E501"]  # Allow longer lines in tests
+"src/itemwise/email_service.py" = ["E501"]  # HTML email templates have long lines
 
 [tool.mypy]
 explicit_package_bases = true
