--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,7 @@ DEBUG=false
 # AZURE_OPENAI_ENDPOINT=https://your-resource.cognitiveservices.azure.com/
 # AZURE_OPENAI_DEPLOYMENT=gpt-4o-mini
 # AZURE_OPENAI_EMBEDDING_DEPLOYMENT=text-embedding-3-small
+
+# Azure Communication Services (optional - enables invite emails)
+# AZURE_COMMUNICATION_CONNECTION_STRING=endpoint=https://...;accesskey=...
+# AZURE_COMMUNICATION_SENDER=DoNotReply@<guid>.azurecomm.net
